CallMD/src/objects/License__c.object
<CustomObject>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <label>Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_review_date__c</fullName>
        <label>Next review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_date__c</fullName>
        <label>Review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <label>Reviewer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>